# Auto-Research

./: .gitignore  LICENSE  README.md  README.zh-CN.md  UPLOAD_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: README.md
benchmark/src/: dataset_runner.py  evaluator.py
benchmark/tests/: test_dataset_runner.py  test_evaluator.py
comparison/: README.md  __init__.py
comparison/src/: __init__.py  comparator.py
comparison/tests/: test_comparator.py
evaluation/: README.md
evaluation/src/: evaluator.py
evaluation/tests/: test_evaluator.py
evidence_db/: README.md  __init__.py
evidence_db/src/: __init__.py  evidence.py
evidence_db/tests/: test_evidence.py
examples/demo/: README.md  benchmark_dataset.json  benchmark_spec.json  local_paper.txt  ranked_papers.csv  run_demo.py
experiment/: README.md  __init__.py
experiment/src/: __init__.py  planner.py  runner.py
experiment/tests/: test_planner.py  test_runner.py
final_qa/: README.md  __init__.py
final_qa/src/: __init__.py  final_gate.py
final_qa/tests/: test_final_gate.py
idea_generation/: README.md
idea_generation/src/: generator.py
idea_generation/tests/: test_generator.py
llm/: __init__.py
llm/src/: __init__.py  provider.py
llm/tests/: test_provider.py
method_design/: README.md
method_design/src/: designer.py
method_design/tests/: test_designer.py
orchestrator/: README.md  __init__.py  design.md
orchestrator/examples/: research_plan.example.json  task_graph.example.json
orchestrator/prompts/: orchestrator_prompt.md
orchestrator/schemas/: artifact_manifest.schema.json  research_plan.schema.json  task_graph.schema.json
orchestrator/sql/: orchestrator_tables.sql
orchestrator/src/: __init__.py  agent_registry.py  orchestrator.py  task_runner.py
orchestrator/tests/: test_agent_registry.py  test_orchestrator.py  test_task_runner.py
paper_reader/: README.md  __init__.py
paper_reader/src/: __init__.py  reader.py
paper_triage/: README.md  __init__.py
planner/: README.md  __init__.py
promotion/: README.md
rebuttal/: README.md
retriever/: README.md  __init__.py
synthesis/: README.md  __init__.py
verification/: README.md  __init__.py
writer/: README.md  __init__.py
writer/src/: writer.py  (+1 more)
(+21 files in other folders)
